--- a/python_snippets/PandaCasIntegration.ipynb
+++ b/python_snippets/PandaCasIntegration.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cashost='sepviya35.aws.sas.com'\n",
+    "cashost='frasepviya35smp'\n",
     "casport=5570\n",
     "sess = swat.CAS(cashost, casport)"
    ]
