--- a/R_snippets/R_Machine_Learning_Demo-SEP.ipynb
+++ b/R_snippets/R_Machine_Learning_Demo-SEP.ipynb
@@ -113,50 +113,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "NOTE: Connecting to CAS and generating CAS action functions for loaded\n",
-      "      action sets...\n",
-      "NOTE: To generate the functions with signatures (for tab completion), set \n",
-      "      options(cas.gen.function.sig=TRUE).\n",
-      "NOTE: 'CASUSER(viyademo01)' is now the active caslib.\n",
-      "NOTE: Action 'sessionProp.setSessOpt' used (Total process time):\n",
-      "NOTE:       real time               0.003529 seconds\n",
-      "NOTE:       cpu time                0.003464 seconds (98.16%)\n",
-      "NOTE:       total nodes             1 (16 cores)\n",
-      "NOTE:       total memory            122.80G\n",
-      "NOTE:       memory                  400.81K (0.00%)\n"
+     "ename": "ERROR",
+     "evalue": "Error in swat::errorcheck(sw_error): Could not connect to 'frasepviya35smp' on port 5570.\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in swat::errorcheck(sw_error): Could not connect to 'frasepviya35smp' on port 5570.\nTraceback:\n",
+      "1. CAS(\"frasepviya35smp\", 5570)",
+      "2. new(structure(\"CAS\", package = \"swat\"), ...)",
+      "3. initialize(value, ...)",
+      "4. initialize(value, ...)",
+      "5. .Object$initialize(...)",
+      "6. swat::errorcheck(sw_error)",
+      "7. stop(m[[1]])"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<ol>\n",
-       "</ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate}\n",
-       "\\end{enumerate}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "list()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "Sys.setenv(CAS_CLIENT_SSL_CA_LIST = \"/opt/sas/viya/config/etc/SASSecurityCertificateFramework/cacerts/trustedcerts.pem\")\n",
+    "#Sys.setenv(CAS_CLIENT_SSL_CA_LIST = \"/opt/sas/viya/config/etc/SASSecurityCertificateFramework/cacerts/trustedcerts.pem\")\n",
+    "Sys.setenv(CAS_CLIENT_SSL_CA_LIST = \"/opt/sas/viya/config/etc/SASSecurityCertificateFramework/cacerts/vault-crt.crt\")\n",
     "conn <- CAS('frasepviya35smp', 5570)\n",
     "# Activate metric tracing and other session parameters\n",
     "cas.sessionProp.setSessOpt(conn, metrics=TRUE, timeout=1800, caslib='casuser')"
