--- a/python_snippets/sasctl_full_lilfecycle.ipynb
+++ b/python_snippets/sasctl_full_lilfecycle.ipynb
@@ -243,7 +243,12 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "ename": "HTTPError",
