--- a/python_snippets/PandaCasIntegration.ipynb
+++ b/python_snippets/PandaCasIntegration.ipynb
@@ -41,6 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.environ['CAS_CLIENT_SSL_CA_LIST'] = '/opt/sas/viya/config/etc/SASSecurityCertificateFramework/cacerts/trustedcerts.pem'\n",
     "cashost='frasepviya35smp'\n",
     "casport=5570\n",
     "sess = swat.CAS(cashost, casport)"
@@ -3982,7 +3983,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
