--- a/python_snippets/PandaCasIntegration.ipynb
+++ b/python_snippets/PandaCasIntegration.ipynb
@@ -20,7 +20,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "import swat\n",
     "import sys\n",
@@ -37,11 +45,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['CAS_CLIENT_SSL_CA_LIST'] = '/opt/sas/viya/config/etc/SASSecurityCertificateFramework/cacerts/trustedcerts.pem'\n",
+    "os.environ['CAS_CLIENT_SSL_CA_LIST'] = '/opt/sas/viya/config/etc/SASSecurityCertificateFramework/cacerts/trustedcerts.pem'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cashost='frasepviya35smp'\n",
     "casport=5570\n",
     "sess = swat.CAS(cashost, casport)"
@@ -49,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +80,7 @@
       "text/html": [
        "<div class=\"cas-results-key\"><b>&#167; About</b></div>\n",
        "<div class=\"cas-results-body\">\n",
-       "<div>{'CAS': 'Cloud Analytic Services', 'Version': '3.05', 'VersionLong': 'V.03.05M0P11112019', 'Copyright': 'Copyright © 2014-2018 SAS Institute Inc. All Rights Reserved.', 'ServerTime': '2020-04-01T09:12:26Z', 'System': {'Hostname': 'sepviya35.aws.sas.com', 'OS Name': 'Linux', 'OS Family': 'LIN X64', 'OS Release': '3.10.0-514.16.1.el7.x86_64', 'OS Version': '#1 SMP Fri Mar 10 13:12:32 EST 2017', 'Model Number': 'x86_64', 'Linux Distribution': 'Red Hat Enterprise Linux Server release 7.3 (Maipo)'}, 'license': {'site': 'Viya35_19W47_Prod_UInsightPLus', 'siteNum': 70180938, 'expires': '24Nov2020:00:00:00', 'gracePeriod': 45, 'warningPeriod': 45, 'maxCPUs': 9999}}</div>\n",
+       "<div>{'CAS': 'Cloud Analytic Services', 'Version': '3.05', 'VersionLong': 'V.03.05M0P11112019', 'Copyright': 'Copyright © 2014-2018 SAS Institute Inc. All Rights Reserved.', 'ServerTime': '2020-09-18T16:31:51Z', 'System': {'Hostname': 'frasepviya35smp.cloud.com', 'OS Name': 'Linux', 'OS Family': 'LIN X64', 'OS Release': '3.10.0-1127.el7.x86_64', 'OS Version': '#1 SMP Tue Feb 18 16:39:12 EST 2020', 'Model Number': 'x86_64', 'Linux Distribution': 'Red Hat Enterprise Linux Server release 7.8 (Maipo)'}, 'license': {'site': 'Viya35_Azure_VAVSVDMMLMMESP', 'siteNum': 70180938, 'expires': '04Aug2021:00:00:00', 'gracePeriod': 45, 'warningPeriod': 45}}</div>\n",
        "</div>\n",
        "<div class=\"cas-results-key\"><hr/><b>&#167; server</b></div>\n",
        "<div class=\"cas-results-body\">\n",
@@ -92,7 +108,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
@@ -129,10 +145,10 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>sepviya35.aws.sas.com</td>\n",
+       "      <th>0</th>\n",
+       "      <td>frasepviya35smp.cloud.com</td>\n",
        "      <td>controller</td>\n",
-       "      <td>2.441</td>\n",
+       "      <td>2.491</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -141,7 +157,7 @@
        "</div>\n",
        "</div>\n",
        "<div class=\"cas-output-area\"></div>\n",
-       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.000712s</span> &#183; <span class=\"cas-user\">user 0.000526s</span> &#183; <span class=\"cas-sys\">sys 0.000156s</span> &#183; <span class=\"cas-memory\">mem 0.322MB</span></small></p>"
+       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.00114s</span> &#183; <span class=\"cas-user\">user 0.00101s</span> &#183; <span class=\"cas-memory\">mem 0.304MB</span></small></p>"
       ],
       "text/plain": [
        "[About]\n",
@@ -150,20 +166,19 @@
        "  'Version': '3.05',\n",
        "  'VersionLong': 'V.03.05M0P11112019',\n",
        "  'Copyright': 'Copyright © 2014-2018 SAS Institute Inc. All Rights Reserved.',\n",
-       "  'ServerTime': '2020-04-01T09:12:26Z',\n",
-       "  'System': {'Hostname': 'sepviya35.aws.sas.com',\n",
+       "  'ServerTime': '2020-09-18T16:31:51Z',\n",
+       "  'System': {'Hostname': 'frasepviya35smp.cloud.com',\n",
        "   'OS Name': 'Linux',\n",
        "   'OS Family': 'LIN X64',\n",
-       "   'OS Release': '3.10.0-514.16.1.el7.x86_64',\n",
-       "   'OS Version': '#1 SMP Fri Mar 10 13:12:32 EST 2017',\n",
+       "   'OS Release': '3.10.0-1127.el7.x86_64',\n",
+       "   'OS Version': '#1 SMP Tue Feb 18 16:39:12 EST 2020',\n",
        "   'Model Number': 'x86_64',\n",
-       "   'Linux Distribution': 'Red Hat Enterprise Linux Server release 7.3 (Maipo)'},\n",
-       "  'license': {'site': 'Viya35_19W47_Prod_UInsightPLus',\n",
+       "   'Linux Distribution': 'Red Hat Enterprise Linux Server release 7.8 (Maipo)'},\n",
+       "  'license': {'site': 'Viya35_Azure_VAVSVDMMLMMESP',\n",
        "   'siteNum': 70180938,\n",
-       "   'expires': '24Nov2020:00:00:00',\n",
+       "   'expires': '04Aug2021:00:00:00',\n",
        "   'gracePeriod': 45,\n",
-       "   'warningPeriod': 45,\n",
-       "   'maxCPUs': 9999}}\n",
+       "   'warningPeriod': 45}}\n",
        "\n",
        "[server]\n",
        "\n",
@@ -176,13 +191,13 @@
        "\n",
        " Node Status\n",
        " \n",
-       "                     name        role  uptime  running  stalled\n",
-       " 0  sepviya35.aws.sas.com  controller   2.441        0        0\n",
+       "                         name        role  uptime  running  stalled\n",
+       " 0  frasepviya35smp.cloud.com  controller   2.491        0        0\n",
        "\n",
-       "+ Elapsed: 0.000712s, user: 0.000526s, sys: 0.000156s, mem: 0.322mb"
+       "+ Elapsed: 0.00114s, user: 0.00101s, mem: 0.304mb"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3983,7 +3998,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
