Last release before delivery

--- a/python_snippets/HMEQ_Train_RegisterMM_Astore_GBM_Model.ipynb
+++ b/python_snippets/HMEQ_Train_RegisterMM_Astore_GBM_Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,34 +14,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Connect to the CAS server\n",
-    "os.environ['CAS_CLIENT_SSL_CA_LIST'] = '/opt/sas/viya/config/etc/SASSecurityCertificateFramework/cacerts/trustedcerts.pem'\n",
-    "s = swat.CAS('frasepviya35smp', 5570)"
+    "# Connect to the CAS server"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NOTE: 'Public' is now the active caslib.\n"
+      "NOTE: 'Public' is now the active caslib.\n",
+      "NOTE: Action 'sessionProp.setSessOpt' used (Total process time):\n",
+      "NOTE:       real time               0.000428 seconds\n",
+      "NOTE:       cpu time                0.000369 seconds (86.21%)\n",
+      "NOTE:       total nodes             1 (32 cores)\n",
+      "NOTE:       total memory            125.74G\n",
+      "NOTE:       memory                  262.06K (0.00%)\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"cas-output-area\"></div>\n",
+       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.000428s</span> &#183; <span class=\"cas-user\">user 0.000369s</span> &#183; <span class=\"cas-memory\">mem 0.256MB</span></small></p>"
+      ],
+      "text/plain": [
+       "+ Elapsed: 0.000428s, user: 0.000369s, mem: 0.256mb"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "os.environ['CAS_CLIENT_SSL_CA_LIST'] = '/opt/sas/viya/config/etc/SASSecurityCertificateFramework/cacerts/trustedcerts.pem'\n",
+    "s = swat.CAS('frasepviya35smp', 5570)\n",
     "# Define default session caslib\n",
-    "s.sessionprop.setsessopt(caslib='Public')\n",
-    "\n",
-    "# Name the CAS table\n",
+    "s.sessionprop.setsessopt(caslib='Public',metrics='true')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Name the existing CAS table to be used\n",
     "indata = 'HMEQ_TRAIN'\n",
     "\n",
     "# Declare python CASTable view on CAS in-memory table\n",
@@ -50,7 +75,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2381, 13)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "castbl.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +281,7 @@
        "max     143.949605  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,22 +299,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "NOTE: Executing action 'builtins.loadActionSet'.\n",
       "NOTE: Added action set 'decisionTree'.\n",
-      "NOTE: 916779 bytes were written to the table \"gradboost_astore\" in the caslib \"Public\".\n"
+      "NOTE: Action 'builtins.loadActionSet' used (Total process time):\n",
+      "NOTE:       real time               0.002889 seconds\n",
+      "NOTE:       cpu time                0.002841 seconds (98.34%)\n",
+      "NOTE:       total nodes             1 (32 cores)\n",
+      "NOTE:       total memory            125.74G\n",
+      "NOTE:       memory                  226.00K (0.00%)\n",
+      "NOTE: Executing action 'decisionTree.gbtreeTrain'.\n",
+      "NOTE: 939819 bytes were written to the table \"gradboost_astore\" in the caslib \"Public\".\n",
+      "NOTE: Action 'decisionTree.gbtreeTrain' used (Total process time):\n",
+      "NOTE:       real time               0.655492 seconds\n",
+      "NOTE:       cpu time                1.611320 seconds (245.82%)\n",
+      "NOTE:       total nodes             1 (32 cores)\n",
+      "NOTE:       total memory            125.74G\n",
+      "NOTE:       memory                  124.52M (0.10%)\n"
      ]
     }
    ],
    "source": [
     "s.loadactionset('decisionTree')\n",
     "castbl.decisiontree.gbtreetrain(target='BAD',\n",
-    "                             inputs=['BAD','LOAN','MORTDUE','VALUE','YOJ','DEROG','DELINQ','CLAGE','NINQ','CLNO','DEBTINC'],\n",
+    "                             inputs=['LOAN','MORTDUE','VALUE','YOJ','DEROG','DELINQ','CLAGE','NINQ','CLNO','DEBTINC'],\n",
+    "                             nominals=['BAD'],\n",
     "                             savestate='gradboost_astore')\n",
     "\n",
     "# Establish a reference to the newly created ASTORE table.\n",
@@ -285,50 +345,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "NOTE: Executing action 'builtins.loadActionSet'.\n",
       "NOTE: Added action set 'astore'.\n",
-      "NOTE: Cloud Analytic Services saved the file _8158653793EB4429BA7DCAC28.sashdat in caslib ModelStore.\n"
+      "NOTE: Action 'builtins.loadActionSet' used (Total process time):\n",
+      "NOTE:       real time               0.001109 seconds\n",
+      "NOTE:       cpu time                0.001087 seconds (98.02%)\n",
+      "NOTE:       total nodes             1 (32 cores)\n",
+      "NOTE:       total memory            125.74G\n",
+      "NOTE:       memory                  209.78K (0.00%)\n",
+      "NOTE: Executing action 'astore.describe'.\n",
+      "NOTE: Action 'astore.describe' used (Total process time):\n",
+      "NOTE:       real time               0.017990 seconds\n",
+      "NOTE:       cpu time                0.017909 seconds (99.55%)\n",
+      "NOTE:       total nodes             1 (32 cores)\n",
+      "NOTE:       total memory            125.74G\n",
+      "NOTE:       memory                  6.86M (0.01%)\n",
+      "NOTE: Executing action 'table.save'.\n",
+      "NOTE: Cloud Analytic Services saved the file _C4353BB662DA48229FEE9F9F7.sashdat in caslib ModelStore.\n",
+      "NOTE: Action 'table.save' used (Total process time):\n",
+      "NOTE:       real time               0.043135 seconds\n",
+      "NOTE:       cpu time                0.004880 seconds (11.31%)\n",
+      "NOTE:       total nodes             1 (32 cores)\n",
+      "NOTE:       total memory            125.74G\n",
+      "NOTE:       memory                  16.54M (0.01%)\n"
      ]
     }
    ],
    "source": [
     "with Session('frasepviya35smp', 'viyademo01', 'demopw'):\n",
-    "    # Register the trained model by providing:\n",
-    "    #  - the ASTORE containing the model\n",
-    "    #  - a name for the model\n",
-    "    #  - a name for the project\n",
-    "    #\n",
-    "    # NOTE: the force=True option will create the project if it does not exist.\n",
     "    model = register_model(astore, 'Gradient Boosting Astore SWAT', 'HMEQ_Modeling', force=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Could not find ETag for update of {'function': 'Classification'}.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-37-ef935d3b2b35>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mSession\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'frasepviya35smp'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'viyademo01'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'demopw'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mmodel_repository\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunction\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Classification'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/opt/anaconda3/lib/python3.8/site-packages/sasctl/_services/service.py\u001b[0m in \u001b[0;36mupdate_item\u001b[0;34m(cls, item)\u001b[0m\n\u001b[1;32m    281\u001b[0m             \u001b[0mheaders\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'_headers'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    282\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mheaders\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mheaders\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'etag'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 283\u001b[0;31m                 raise ValueError(\n\u001b[0m\u001b[1;32m    284\u001b[0m                     'Could not find ETag for update of %s.' % item)\n\u001b[1;32m    285\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Could not find ETag for update of {'function': 'Classification'}."
-     ]
-    }
-   ],
-   "source": [
-    "with Session('frasepviya35smp', 'viyademo01', 'demopw'):\n",
-    "    model_repository.update_model(dict(function='Classification'))"
    ]
   },
   {
@@ -340,31 +392,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NOTE: Added action set 'decisionTree'.\n",
-      "NOTE: 918707 bytes were written to the table \"gradboost_astore\" in the caslib \"Public\".\n",
-      "NOTE: Added action set 'astore'.\n",
-      "NOTE: Cloud Analytic Services saved the file _C2ADBCAAC4C2425389E5B4C23.sashdat in caslib ModelStore.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with Session('frasepviya35smp', 'viyademo01', 'demopw'):\n",
-    "    module = publish_model(model, 'maslocal')\n",
+    "    module = publish_model(model, 'maslocal',replace=1)\n",
     "\n",
     "    # sasctl wraps the published module with Python methods corresponding to the various steps defined in the module (like \"predict\").\n",
-    "    response = module.score(SepalLength=5.1, SepalWidth=3.5, PetalLength=1.4, PetalWidth=0.2)"
+    "    #response = module.score(SepalLength=5.1, SepalWidth=3.5, PetalLength=1.4, PetalWidth=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
