Update train and register.

--- a/python_snippets/HMEQ_Train_RegisterMM_Astore_GBM_Model.ipynb
+++ b/python_snippets/HMEQ_Train_RegisterMM_Astore_GBM_Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -31,8 +31,8 @@
      "text": [
       "NOTE: 'Public' is now the active caslib.\n",
       "NOTE: Action 'sessionProp.setSessOpt' used (Total process time):\n",
-      "NOTE:       real time               0.000428 seconds\n",
-      "NOTE:       cpu time                0.000369 seconds (86.21%)\n",
+      "NOTE:       real time               0.000490 seconds\n",
+      "NOTE:       cpu time                0.000415 seconds (84.69%)\n",
       "NOTE:       total nodes             1 (32 cores)\n",
       "NOTE:       total memory            125.74G\n",
       "NOTE:       memory                  262.06K (0.00%)\n"
@@ -42,13 +42,13 @@
      "data": {
       "text/html": [
        "<div class=\"cas-output-area\"></div>\n",
-       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.000428s</span> &#183; <span class=\"cas-user\">user 0.000369s</span> &#183; <span class=\"cas-memory\">mem 0.256MB</span></small></p>"
+       "<p class=\"cas-results-performance\"><small><span class=\"cas-elapsed\">elapsed 0.00049s</span> &#183; <span class=\"cas-user\">user 0.000415s</span> &#183; <span class=\"cas-memory\">mem 0.256MB</span></small></p>"
       ],
       "text/plain": [
-       "+ Elapsed: 0.000428s, user: 0.000369s, mem: 0.256mb"
+       "+ Elapsed: 0.00049s, user: 0.000415s, mem: 0.256mb"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "(2381, 13)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "max     143.949605  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -309,16 +309,16 @@
       "NOTE: Executing action 'builtins.loadActionSet'.\n",
       "NOTE: Added action set 'decisionTree'.\n",
       "NOTE: Action 'builtins.loadActionSet' used (Total process time):\n",
-      "NOTE:       real time               0.002889 seconds\n",
-      "NOTE:       cpu time                0.002841 seconds (98.34%)\n",
+      "NOTE:       real time               0.002772 seconds\n",
+      "NOTE:       cpu time                0.002697 seconds (97.29%)\n",
       "NOTE:       total nodes             1 (32 cores)\n",
       "NOTE:       total memory            125.74G\n",
       "NOTE:       memory                  226.00K (0.00%)\n",
       "NOTE: Executing action 'decisionTree.gbtreeTrain'.\n",
-      "NOTE: 939819 bytes were written to the table \"gradboost_astore\" in the caslib \"Public\".\n",
+      "NOTE: 924835 bytes were written to the table \"gradboost_astore\" in the caslib \"Public\".\n",
       "NOTE: Action 'decisionTree.gbtreeTrain' used (Total process time):\n",
-      "NOTE:       real time               0.655492 seconds\n",
-      "NOTE:       cpu time                1.611320 seconds (245.82%)\n",
+      "NOTE:       real time               0.631684 seconds\n",
+      "NOTE:       cpu time                1.470797 seconds (232.84%)\n",
       "NOTE:       total nodes             1 (32 cores)\n",
       "NOTE:       total memory            125.74G\n",
       "NOTE:       memory                  124.52M (0.10%)\n"
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -355,26 +355,26 @@
       "NOTE: Executing action 'builtins.loadActionSet'.\n",
       "NOTE: Added action set 'astore'.\n",
       "NOTE: Action 'builtins.loadActionSet' used (Total process time):\n",
-      "NOTE:       real time               0.001109 seconds\n",
-      "NOTE:       cpu time                0.001087 seconds (98.02%)\n",
+      "NOTE:       real time               0.001345 seconds\n",
+      "NOTE:       cpu time                0.001314 seconds (97.70%)\n",
       "NOTE:       total nodes             1 (32 cores)\n",
       "NOTE:       total memory            125.74G\n",
-      "NOTE:       memory                  209.78K (0.00%)\n",
+      "NOTE:       memory                  209.84K (0.00%)\n",
       "NOTE: Executing action 'astore.describe'.\n",
       "NOTE: Action 'astore.describe' used (Total process time):\n",
-      "NOTE:       real time               0.017990 seconds\n",
-      "NOTE:       cpu time                0.017909 seconds (99.55%)\n",
+      "NOTE:       real time               0.017702 seconds\n",
+      "NOTE:       cpu time                0.017620 seconds (99.54%)\n",
       "NOTE:       total nodes             1 (32 cores)\n",
       "NOTE:       total memory            125.74G\n",
       "NOTE:       memory                  6.86M (0.01%)\n",
       "NOTE: Executing action 'table.save'.\n",
-      "NOTE: Cloud Analytic Services saved the file _C4353BB662DA48229FEE9F9F7.sashdat in caslib ModelStore.\n",
+      "NOTE: Cloud Analytic Services saved the file _6ED7DB00C3B142569A8CE034C.sashdat in caslib ModelStore.\n",
       "NOTE: Action 'table.save' used (Total process time):\n",
-      "NOTE:       real time               0.043135 seconds\n",
-      "NOTE:       cpu time                0.004880 seconds (11.31%)\n",
+      "NOTE:       real time               0.021998 seconds\n",
+      "NOTE:       cpu time                0.004053 seconds (18.42%)\n",
       "NOTE:       total nodes             1 (32 cores)\n",
       "NOTE:       total memory            125.74G\n",
-      "NOTE:       memory                  16.54M (0.01%)\n"
+      "NOTE:       memory                  16.55M (0.01%)\n"
      ]
     }
    ],
@@ -387,7 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Optional : trigger model deployement and scoring from Python API"
+    "# Optional : trigger model deployment and scoring from Python API"
    ]
   },
   {
@@ -405,12 +405,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "s.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
